Fix table column spacing.

--- a/css/style.css
+++ b/css/style.css
@@ -362,6 +362,9 @@ html, body {
 .dropdown-open {
   background: #e7e7e7;
 }
+td {
+  padding-right: 1em;
+}
 
 
 /*
